fixed comment spacing

--- a/app/assets/stylesheets/components/song_display.scss
+++ b/app/assets/stylesheets/components/song_display.scss
@@ -10,6 +10,7 @@ div[data-react-class='SongDisplay'] {
     text-align: left;
 
     .comment {
+        margin-bottom: 8px;
         color: darkgray;
         font-size: 90%;
     }
